--- a/Level1/Unit1/index.html
+++ b/Level1/Unit1/index.html
@@ -183,6 +183,9 @@
                 <a href="Bible.html" class="activity-button">
                     <img src="../../imagens/Bible.png" alt="Bible">
                 </a>
+                <a href="apresentacao.html" class="activity-button">
+                    <img src="../../imagens/apresentacao.png" alt="apresentacao">
+                </a>
                 <a href="test.html" class="activity-button">
                     <img src="../../imagens/test.png" alt="Test">
                 </a>
