--- a/Level1/Unit2/index.html
+++ b/Level1/Unit2/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>  
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -94,6 +94,7 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
+            text-decoration: none;
         }
 
         .activity-button img {
@@ -119,8 +120,21 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
+            text-decoration: none;
         }
 
+        .teacher-resources img {
+            width: 100%;
+            height: auto;
+            max-width: 130px;
+        }
+
+        .teacher-resources:hover {
+            transform: scale(1.05);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+        }
+
+        /* Botão Robot Lex ocupando duas colunas */
         .robot-lex {
             grid-column: span 2;
             display: flex;
@@ -132,6 +146,7 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
+            text-decoration: none;
         }
 
         .robot-lex img {
@@ -145,10 +160,37 @@
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
         }
 
+        /* Botão Test ocupando duas colunas */
+        .test-button {
+            grid-column: span 2;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 15px;
+            background-color: #FFFFFF;
+            border: 2px solid #4CAF50;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            text-decoration: none;
+        }
+
+        .test-button img {
+            width: 100%;
+            height: auto;
+            max-width: 130px;
+        }
+
+        .test-button:hover {
+            transform: scale(1.05);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+        }
+
         /* Responsividade para telas pequenas */
         @media (max-width: 400px) {
             .teacher-resources,
-            .robot-lex {
+            .robot-lex,
+            .test-button {
                 grid-column: span 1; /* Ocupa toda a largura em telas pequenas */
             }
         }
@@ -184,9 +226,11 @@
                     <img src="../../imagens/Bible.png" alt="Bible">
                 </a>
                 <a href="apresentacao.html" class="activity-button">
-                    <img src="../../imagens/apresentacao.png" alt="apresentacao">
+                    <img src="../../imagens/apresentacao.png" alt="Apresentação">
                 </a>
-                <a href="test.html" class="activity-button">
+                
+                <!-- Botão Test atualizado para ocupar duas colunas e ter a mesma responsividade -->
+                <a href="test.html" class="activity-button test-button">
                     <img src="../../imagens/test.png" alt="Test">
                 </a>
 
